# jt1078_video_server

./: .gitignore  Cargo.toml  README.md  gen_h264.py
data/: test_stream.h264
src/: helper.rs  lib.rs  main.rs  processor.rs  rtp.rs  tcp_client.rs
src/server/: mod.rs  tcp_server.rs  web_server.rs
tests/app/: main.rs  tcp_client.rs
