[package]
name = "jt1078_video_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-files = { version = "0.6", features = ["tokio-uring"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "signal",
    "fs",
    "sync",
    "process",
] }
anyhow = "1"
actix-web = "4"
